--- a/mychat/src/components/chat/chat.css
+++ b/mychat/src/components/chat/chat.css
@@ -3,6 +3,8 @@
     border-left: 1px solid #d3c3c3;
     border-right:  1px solid #d3c3c3;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .top{
     padding: 15px;
@@ -44,6 +46,7 @@
    justify-content: space-between;
    border-top:1px solid #d3c3c3;
    gap: 20px;
+   margin-top: auto;
 
    .iconn{
         display: flex;
@@ -72,10 +75,57 @@
 }
 .emoji{
     position: relative;
+    
 }
 .emojiBox{
     position: absolute;
-    top: 35px;
-    right: 13px;
+    bottom: 35px;
     overflow-y: auto;
+    /* width: 70vw; */
+    right: 14px;
+   
+}
+.center{
+    padding:20px;
+    flex:1;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .message{
+        max-width: 70%;
+        display: flex;
+        gap: 20px;
+        
+
+        .texts{
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+        p{
+            padding: 10px;
+            background: #384b13;
+            border-radius: 10px;
+            line-height: 1.5;
+        }
+        span{
+            font-size: 12px;
+        }
+    }
+
+    .own{
+        align-self: flex-end;
+        
+        p{
+            background: #85c505;
+        }
+    }
+}
+.center::-webkit-scrollbar{
+    display: none;
+    width:0;
+    height: 0;
 }
